# auto-clicker

./: Cargo.toml
src/: clicker.rs  main.rs
