[package]
name = "auto-clicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.9", features = ["canvas", "tokio", "debug", "default_system_font"] }
time = { version = "0.3.5", features = ["local-offset"] }
autopilot = "0.4"
anyhow = "1.0"
tokio = "1.27"
